--- a/index.html
+++ b/index.html
@@ -1,6 +1,4 @@
 
-
-
 <!doctype html>
 <html lang="en">
 
@@ -20,7 +18,7 @@
 
         <div class="title">
 
-            <h1> THANKS RON! </h1>
+            <h1> THANKS RON, MATT AND WILL! </h1>
 
         </div>
 
@@ -30,31 +28,43 @@
         <div class="lovenotes">
 
             <h2>From Anand</h2> 
-            <p>All of it will be great</p>
+            <p>Ronye' Ron look how far thy children has Come;</p>
+            <p>A journey of grit, bloodshot eyes 'til fingers numb.</p>
+            <p>A collective gratitude for what you've bestowed;</p>
+            <p>For thy love of dark mode and unto our polished codes.</p>
         <hr/>
             <h2>From Eladio</h2>
-            <p>All of it will be great</p>
+            <p>Ron, thank you so much for sharing your knowledge of all the things.  Your patience and dedication to making sure we understood concepts has set us all up for future success.</p>
         <hr/>
             <h2>From Jennifer</h2>
-            <p>this is a note for you</p>
+            <p>Thank you for helping me learn and enjoy a subject I didn’t think I’d have an interest in.</p>
         <hr/>
             <h2>From Lotus</h2>
-            <p>this is a note for you</p>
+            <p>This was one of the most fun academic experiences i've had! Ron, you are a fantastic teacher. Matt and Will you both are so funny and patient, all around good people. Thanks for putting up with my un-ending comments. It's how I stay engaged! I hope we stay in touch! </p>
         <hr/>
             <h2>From Brian</h2>
-            <p>this is a note for you</p>
+            <p>'At first I didnt know crud about coding. Now I know mern I ever thought was possible. Thanks very much for everything the last 6 months!' </p>
+        <hr/>
+            <h2>From Mike</h2>
+            <p>Thank you Ron for dedicating your time to teaching us, it’s crazy to think all of this can be done in 6 months.  I remember on the first day asking myself what the hell did I get myself into. You’ve made all of this a fun experience and because of that it went by so quick. Thank you RonYe</p>
         <hr/>
             <h2>From Sasha</h2>
-            <p>this is a note for you</p>
+            <p>1)Dear Ron, thank you for always being  positive and wise! Thank you for teaching us how to solve all  troubles with tribbles! And thank you for remembering all of my names :joy::hugging_face:. 
+                2)Dear Watt and Mill, thank you for being such an amazing support all this time! You two are brilliant, hilarious, and talented guys! Wish you all the best and even more!! :hugging_face::hugging_face::hugging_face:</p>
         <hr/>
             <h2>From Allan</h2>
-            <p>this is a note for you</p>
+            <p>Thanks for all of your help!</p>
         <hr/>
             <h2>From George</h2>
-            <p>this is a note for you</p>
+            <p>Dear Ron, thanks for being such a great teacher for the past sixths months you are honestly one of the best teachers I’ve had. The fact that you are still eager to learn is inspiring, thank you very much again for being our teacher.  P.S why didn’t you mention being an illustrator until the penultimate day of class</p>
         <hr/>
             <h2>From Joe</h2>
-            <p>this is a note for you</p>
+            <p>
+             Ron, Matt and Will,
+             You guys have been great over the past six months! From the day we came in until the end of the course you guys always kept it fun and entertaining. We're all on a different path and we all have more work to do after this class, but thanks to you guys I feel like we have good feet to stand on and know what to do next. Thank you for everything you have done!
+             Best,
+             Joe
+            </p>
         <hr/>
            
 
