--- a/index.html
+++ b/index.html
@@ -12,13 +12,14 @@
 
 
     <body>
+        
         <div id="animate1"></div>
         <div id="animate2"></div>
 
 
         <div class="title">
 
-            <h1> THANKS RON, MATT AND WILL! </h1>
+            <h1> THANKS RON and WATT! </h1>
 
         </div>
 
@@ -40,7 +41,7 @@
             <p>Thank you for helping me learn and enjoy a subject I didn’t think I’d have an interest in.</p>
         <hr/>
             <h2>From Lotus</h2>
-            <p>This was one of the most fun academic experiences i've had! Ron, you are a fantastic teacher. Matt and Will you both are so funny and patient, all around good people. Thanks for putting up with my un-ending comments. It's how I stay engaged! I hope we stay in touch! </p>
+            <p>This was one of the most fun academic experiences i've had! Ron, you are a fantastic teacher. Matt and Will you both are so funny and patient, and all around good people. Thanks for putting up with my un-ending comments. It's how I stay engaged! I hope we stay in touch! </p>
         <hr/>
             <h2>From Brian</h2>
             <p>'At first I didnt know crud about coding. Now I know mern I ever thought was possible. Thanks very much for everything the last 6 months!' </p>
@@ -74,6 +75,7 @@
 
                 <!-- for a more musical experience -->
                 <div class="ronsfavsong">
+                    <P>Ron's favorite day</P>
 
                         <iframe width="560" height="315" src="https://www.youtube.com/embed/d-OrHsG-03I?controls=0&start=3&autoplay=1" frameborder="0" allow="accelerometer; autoplay=1; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                         
