--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
         <div class="title">
 
-            <h1> THANKS RON and WATT! </h1>
+            <h1> Thanks Ron and Watt! </h1>
 
         </div>
 
